--- a/src/app/login/style.css
+++ b/src/app/login/style.css
@@ -1,14 +1,31 @@
 body{
     background-color: #2B22BB;
     font-family: Arial, Helvetica, sans-serif;
+    background-image: url("/login-background.png");
+    background-repeat: no-repeat;
 }
-.nome{
-    background-color: aqua;
-    height: 300px;
+
+@media (max-aspect-ratio: 16/9) {
+    body {
+        background-position-x: center;
+        background-position-y: 40%;
+        background-size: fill;
+        aspect-ratio: 9/21;
+    }
 }
-a{
-    
+
+@media (min-aspect-ratio: 16/9) {
+    body {
+        background-position-y: top;
+        background-size: cover;
+    }
+}
+
+.btn-login {
+    background-color: #DCE2FC;
     color: #412669;
-    text-decoration: none;
-    font-size: 25px;
+    font-size: 20px;
+    border-radius: 8px;
+    border: none;
+    width: 175px;
 }
