Feat: content of home page done

--- a/src/app/home/style.css
+++ b/src/app/home/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #6a1caf;
+    background-color: #C4CFF8;
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
