--- a/src/app/style.css
+++ b/src/app/style.css
@@ -1,4 +1,8 @@
-body{
+html, body{
     margin: 0;
     padding: 0;
+    font-family: 'Lilita One', sans-serif;
+}
+*{
+    font-family: 'Lilita One', sans-serif;
 }
