--- a/src/app/entidade/style.css
+++ b/src/app/entidade/style.css
@@ -9,44 +9,77 @@ body {
   
   .entidade-container {
     min-height: 100vh;
+    display: flex;
+    flex-direction: column;
     align-items: center;
     padding: 20px;
-  }
-  
-  .entidade-logo {
+    gap: 20px;
+}
+
+@media (min-width: 768px) {
+    .entidade-container {
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: flex-start;
+        gap: 40px;
+    }
+}
+
+.entidade-logo {
     width: 100%;
     height: auto;
-    margin-bottom: 30px;
-  }
-  
+    max-width: 400px;
+}
 
-  .entidade-description {
-    font-size: 27px;
+@media (min-width: 768px) {
+    .entidade-logo {
+        width: 40%;
+        height: auto;
+        display: inline-block;
+    }
+}
+
+.entidade-content {
+    display: flex;
+    flex-direction: column; 
+    justify-content: flex-start;
+    align-items: flex-start;
+    width: 60%;
+    gap: 20px;
+}
+
+/* Descrição */
+.entidade-description {
+    font-size: 18px;
     line-height: 1.6;
     color: #FFFFFF;
-    text-align: center;
-    margin: 10px 10px;
-    padding: 0;
+    text-align: left; /* Alinhado à esquerda */
+}
+@media (min-width: 768px) {
+  .entidade-description {
+      display: inline-block;
   }
-  
+}
 
-  .entidade-button {
+
+/* Botão */
+.entidade-button {
     background: linear-gradient(90deg, #0E6DDD, #0CE656);
     color: white;
     padding: 15px 30px;
     border: none;
     border-radius: 10px;
     cursor: pointer;
-    font-size: 27px;
+    font-size: 18px;
     text-decoration: none;
-    text-align: center;
-    transition: background 0.3s ease;
-    display: flex;
     align-items: center;
-    gap: 8px;
-  }
-  
-  .entidade-button:hover {
+    gap: 8px; /* Espaço entre ícone e texto */
+}
+
+.entidade-button:hover {
     background: #8697DC;
-  }
-  
+}
+
+.pi {
+    margin-right: 10px;
+}
