--- a/src/app/entidade/style.css
+++ b/src/app/entidade/style.css
@@ -7,7 +7,7 @@ body {
     padding: 0;
   }
   
-  .entidade-container {
+.entidade-container {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
@@ -33,9 +33,11 @@ body {
 
 @media (min-width: 768px) {
     .entidade-logo {
-        width: 40%;
+        max-width: 600px;
         height: auto;
         display: inline-block;
+        margin-bottom: 40px;
+        margin-top: 100px;
     }
 }
 
@@ -53,11 +55,13 @@ body {
     font-size: 18px;
     line-height: 1.6;
     color: #FFFFFF;
-    text-align: left; /* Alinhado à esquerda */
+    text-align: left;
+    padding: 0 40px;
 }
 @media (min-width: 768px) {
   .entidade-description {
       display: inline-block;
+      font-size: 25px;
   }
 }
 
@@ -72,14 +76,32 @@ body {
     cursor: pointer;
     font-size: 18px;
     text-decoration: none;
+    display: inline-flex;
     align-items: center;
-    gap: 8px; /* Espaço entre ícone e texto */
+    justify-content: center;
+    gap: 10px;
+    line-height: 1;
+
+}
+
+@media (min-width: 768px) {
+    .entidade-button {
+        border-top: 100px;
+    }
 }
 
 .entidade-button:hover {
     background: #8697DC;
 }
 
-.pi {
+.entidade-button i {
+    line-height: 0;
+    vertical-align: middle;
     margin-right: 10px;
 }
+
+.entidade-button span {
+    vertical-align: middle;
+    line-height: 1;
+}
+
