--- a/src/app/home/style.css
+++ b/src/app/home/style.css
@@ -4,3 +4,32 @@ body{
     margin: 0;
     padding: 0;
 }
+.card-admin {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem; 
+    background: #f9f9f9;
+    border-radius: 8px;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    max-width: 100%;
+    width: auto;
+    margin: 0 auto;
+}
+
+.card-admin i {
+    font-size: 12rem;
+}
+
+.card-admin p {
+    margin-top: 1rem;
+    font-size: 2rem;
+    color: #333;
+}
+.grid a{
+    text-decoration: none;
+}
+
+
