--- a/src/app/gerenciar-cursos/style.css
+++ b/src/app/gerenciar-cursos/style.css
@@ -2,7 +2,6 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 .p-card {
-    cursor: pointer;
     border-bottom: 1px solid black;
     display: inline-block;
     width: 100%;
@@ -21,4 +20,16 @@
 a{
     text-decoration: none;
     color: black
+}
+.p-button{
+    border-radius: 50%;
+    font-size: 1.5rem;
+    color: white
+}
+.add{
+    float: right
+}
+.p-button-warning{
+    background-color: rgb(219, 219, 53);
+    color: white
 }
