fix: curso screen design redone

--- a/src/app/curso/style.css
+++ b/src/app/curso/style.css
@@ -1,130 +1,6 @@
-body {
-  background-color: #2b22bb;
+ body {
+  background-color: #2B22BB;
   font-family: 'Arial', sans-serif;
   margin: 0;
   padding: 0;
-}
-
-.foto-curso {
-  width: 100%;
-  height: 80%;
-  object-fit: cover;
-  display: block;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-}
-
-@media (max-width: 768px) {
-  .foto-curso {
-    max-width: 100%;
-    height: 130%;  
-  }
-}
-.card-container {
-  background-color: #98a7e2;
-  padding: 40px;
-  border-radius: 20px;
-  text-align: center;
-  width: 80%;
-  max-width: 380px;
-  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
-  margin: 20px auto;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-
-.card-container:hover {
-  transform: translateY(-10px);
-  box-shadow: 0 12px 24px rgba(0, 0, 0, 0.3);
-}
-
-.card-container img {
-  width: 140px;
-  height: 140px;
-  border-radius: 50%;
-  margin-bottom: 20px;
-  border: 4px solid white;
-}
-
-.card-container h3 {
-  margin: 10px 0;
-  color: #333;
-  font-size: 1.8em;
-  font-weight: bold;
-}
-
-.card-container p {
-  margin: 5px 0 0;
-  color: #555;
-  font-size: 1.2em;
-}
-
-.header-sobre {
-  color: white;
-  font-weight: bold;
-  text-align: center;
-  font-size: 2em;
-  margin-bottom: 20px;
-}
-
-.description-container {
-  text-align: center;
-  color: white;
-  font-size: 1.2em;
-  max-width: 700px;
-  margin: 0 auto;
-  line-height: 1.6;
-}
-
-.description-container a {
-  color: #98a7e2;
-  font-weight: bold;
-  font-size: 1.1em;
-  text-decoration: none;
-}
-
-.description-container a:hover {
-  color: #2b22bb;
-}
-
-.see-more-btn {
-  background-color: #98a7e2;
-  border: none;
-  color: black;
-  font-size: 1.2em;
-  margin-top: 20px;
-  padding: 12px 25px;
-  border-radius: 8px;
-  cursor: pointer;
-  transition: background-color 0.3s ease, color 0.3s ease;
-}
-
-.see-more-btn:hover {
-  background-color: #2b22bb;
-  color: white;
-}
-
-.grid {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  padding: 20px;
-  gap: 20px;
-}
-
-.col-12 {
-  width: 100%;
-}
-
-.md\:col-6 {
-  width: 48%;
-}
-
-.md\:col-5 {
-  width: 48%;
-}
-
-@media (max-width: 768px) {
-  .md\:col-6, .md\:col-5 {
-    width: 100%;
-  }
 }
