--- a/src/app/mapa/style.css
+++ b/src/app/mapa/style.css
@@ -1,5 +1,3 @@
-
-/* Global styles */
 html, body {
   background-color: #2B22BB;
   margin: 0;
@@ -7,16 +5,25 @@ html, body {
   width: 100%;
   height: 100%;
   font-family: Arial, sans-serif;
-  justify-content: center;
-  align-items: center;
-  overflow: hidden;
   color: white;
 }
 
+.mapa_maua {
+  display: flex;
+  flex-direction: column; 
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  box-sizing: border-box; 
+  padding: 20px; 
+  margin-top: 0;
+  padding-top: 0;
+}
 
 .content {
   text-align: center;
   width: 100%;
+  max-width: 800px;
 }
 
 .title {
@@ -31,17 +38,33 @@ html, body {
 }
 
 .map-container {
-  width: 70%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
   max-width: 800px;
-  height: 600;
+  height: 500px;
   border: 1px solid #ffffff33; 
   border-radius: 10px;
   overflow: hidden;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.25);
 }
 
-@media (max-width: 768px) {
-  iframe {
-      height: 100vh !important;
-  }
+iframe {
+  width: 100%;
+  height: 100%;
+  border: none;
 }
+
+@media (max-width: 768px) {
+  .map-container {
+    width: 90%;
+    height: 500px;
+  }
+  iframe {
+    height: 500px;
+  }
+    
+}
+
+
